# aleo-prover

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/: FUNDING.yml
src/: client.rs  client_direct.rs  lib.rs  main.rs  message.rs  node.rs  prover.rs
templates/: 403591  403592  403593  403594  403595  403596  403597  403598  403599  403600  403601  403602  403603  403604  403605  403606  403607  403608  403609  403610  403611  403612  403613
