```toml
[package]
name = "aleo-prover"
version = "0.5.1"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
snarkvm = "0.9.10"
snarkvm-algorithms = "0.9.10"
snarkos-account = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }
snarkos-node-messages = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }
rand = "0.8.5"
num_cpus = "1.13.1"
rayon = "1.5.1"
anyhow = "1.0.53"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
tokio-stream = "0.1.8"
futures = "0.3.21"
futures-util = "0.3.21"
crossbeam = "0.8.1"
bytes = "1.1.0"
bincode = "1.3.3"
byteorder = "1.4.3"
ansi_term = "0.12.1"
json-rpc-types = "1.0.3"
hex = "0.4.3"
dotenvy = "0.15.6"

[dependencies.clap]
version = "4.0.10"
features = ["derive"]

[dependencies.tokio]
version = "1.16.1"
features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net"
]

[dependencies.tokio-util]
version = "0.7.0"
features = ["codec"]

[dependencies.serde_json]
version = "1.0.82"
features = ["preserve_order"]

[features]

[profile.dev]
opt-level = 1
debug-assertions = false

[profile.release]
opt-level = 3
debug = 1
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "aleo-prover"
path = "src/main.rs"

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "lib
```
