[package]
name = "aleo-prover"
version = "0.6.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# for appimage
[[bin]]
name = "aleo-prover"
path = "src/main.rs"

[dependencies]
#snarkvm = { path = "../../src/snarkVM" }
#snarkvm-algorithms = { path = "../../src/snarkVM/algorithms" }
#snarkos = { path = "../../src/snarkOS" }
snarkvm = { git = "https://github.com/AleoNet/snarkVM", rev = "fddd8b9" }
snarkvm-algorithms = { git = "https://github.com/AleoNet/snarkVM", rev = "fddd8b9" }
snarkvm-ledger-puzzle = { git = "https://github.com/AleoNet/snarkVM", rev = "fddd8b9" }
snarkvm-ledger-puzzle-epoch = { git = "https://github.com/AleoNet/snarkVM", rev = "fddd8b9" }
snarkvm-ledger-narwhal-data = { git = "https://github.com/AleoNet/snarkVM", rev = "fddd8b9" }
#snarkvm = "0.9.10"
#snarkvm-algorithms = "0.9.10"
snarkos-account = { git = "https://github.com/AleoNet/snarkOS", rev = "85bd2b3" }
snarkos-node-router-messages = { git = "https://github.com/AleoNet/snarkOS", rev = "85bd2b3" }

rand = "0.8.5"
num_cpus = "1.16.0"
rayon = "1.10.0"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-stream = "0.1.15"
futures = "0.3.30"
futures-util = "0.3.30"
crossbeam = "0.8.4"
bytes = "1.6.0"
bincode = "1.3.3"
byteorder = "1.4.3"
ansi_term = "0.12.1"
json-rpc-types = "1.3.4"
hex = "0.4.3"
dotenvy = "0.15.7"

#[dependencies.aleo-stratum]
#git = "https://github.com/HarukaMa/aleo-pool-server"
#branch = "testnet3-dummy"
#path = "../aleo-operator/stratum"

[dependencies.clap]
version = "4.0.10"
features = ["derive"]

[dependencies.tokio]
version = "1.37.0"
features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net"
]

[dependencies.tokio-util]
version = "0.7.11"
features = ["codec"]

[dependencies.serde_json]
version = "1.0.117"
features = ["preserve_order"]

[features]
#cuda = ["snarkvm/cuda"]

[profile.dev]
opt-level = 1
debug-assertions = false

[profile.release]
opt-level = 3
debug = 1
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
]
